Remove padding from footer as not needed and to prevent overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,5 +153,4 @@ nav li:hover {
 .socials > li {
     display: inline;
     font-size: 200%;
-    padding-top: 50px;
 }
